--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,57 @@
-.col-8{
+.debug{
     border: 1px solid red;
-    height: 400px;
 }
+
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carosello{
+    position: relative;
+}
+
+
+/*SLIDES*/
+
+#slide-container{
+    width: 900px;
+    height: 400px;
+    overflow: hidden;
+}
+
+#image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* CONTROLLER*/
+
+
+.arrow{
+    width: 30px;
+    aspect-ratio: 1;
+    position: absolute;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: rgb(0, 0, 0, 0.5);
+    line-height: 30px;
+    vertical-align: center;
+    text-align: center;
+    color: white;
+}
+
+#up-arrow{
+    top: 10px;
+    left: 50%;
+}
+
+#down-arrow{
+    bottom: 10px;
+    left: 50%;
+}
+
+
