--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,10 @@
     border: 1px solid red;
 }
 
+.d-none{
+    display: none;
+}
+
 .container{
     height: 100vh;
     display: flex;
@@ -18,14 +22,54 @@
 
 #slide-container{
     width: 900px;
-    height: 400px;
+    aspect-ratio: 16/9;
     overflow: hidden;
+    position: relative;
 }
 
 #image{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/* SCROLL */
+
+#scroll{
+    overflow: auto;
+
+    width: 25%;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+#scroll div{
+    width: 80%;
+    height: 100%;
+    aspect-ratio: 16/9;
+    
+}
+
+#scroll img{
+    width: 100%;
+    height: calc(546px / 5);
+    object-fit: cover;
+}
+
+.selection{
+    opacity: 0.5;
+}
+
+.border{
+    border: 3px solid white;
 }
 
 /* CONTROLLER*/
